--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,11 @@
         "dompdf/dompdf": "*"
     },
     "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
-    },
+    "psr-4": {
+        "App\\": "app/",
+        "Core\\": "core/"
+    }
+},
     "authors": [
         {
             "name": "antropomorfos",
